add new backgorun in creator

--- a/app/styles/app.min.styl
+++ b/app/styles/app.min.styl
@@ -5290,6 +5290,7 @@ white = #fff
 	margin 20px 0
 
 	&-left
+		padding: 20px 0;
 		flex 2
 		display flex
 		background-size: cover;
@@ -5299,6 +5300,7 @@ white = #fff
 		.controls
 			position absolute
 			right 0
+			top 0
 			background white
 			i
 				cursor pointer
