--- a/app/views/user/work/sell.html
+++ b/app/views/user/work/sell.html
@@ -198,7 +198,7 @@
 	<div class="grid-container grid-product-2 hide product-container">
 		<div class="grid-100">
 			<div class="sales">
-				<div class="sales-left" style="background-image: url('http://res.cloudinary.com/arte-manifiesto/image/upload/v1458855146/general/fondo_prints_2.png');">
+				<div class="sales-left" style="background-image: url('http://res.cloudinary.com/arte-manifiesto/image/upload/v1461272972/general/White-Brick-Wallpaper1.jpg');">
 					<div class="controls">
 						<i class="selected fa fa-check-square-o part-btn-1"></i>
 						<i class="fa fa-check-square-o part-btn-2"></i>
