add link to new landing

--- a/app/styles/app.min.styl
+++ b/app/styles/app.min.styl
@@ -5616,7 +5616,9 @@ white = #fff
 
 .market-grid
 	&-element
-		background #d8d8d8
+		display block
+		// background #d8d8d8
+		text-align center
 		margin 10px 0
 		background-size cover
 		background-position center center
