--- a/app/views/pages/new-landing.html
+++ b/app/views/pages/new-landing.html
@@ -15,13 +15,7 @@
 					<div class="slider-item js-slide" style="background-image: url('http://res.cloudinary.com/arte-manifiesto/image/upload/v1450065553/general/home-slider-1.jpg')">
 						<div class="slider-item-inner">
 							<p class="title">La primera red social de artistas visuales y creadores de latinoamerica</p>
-							<!-- <p class="subtitle u-padding-top-10">James Gurney picks the most interesting pieces from the luxury watch fair</p> -->
 						</div>
-					<!-- <img src="/img/banners/banner-1.jpg">
-						<div class="slider-item-inner">
-							<p class="title">Tentacles Abound in Our Best Jellyfish Pictures</p>
-							<p class="subtitle u-padding-top-10">James Gurney picks the most interesting pieces from the luxury watch fair</p>
-						</div>-->
 					</div>
 					<a href="https://kuestionario.typeform.com/to/VNsGbl">
 					<div class="slider-item js-slide" style="background-image: url('http://res.cloudinary.com/arte-manifiesto/image/upload/v1450065551/general/home-slider-2.jpg')">
@@ -34,7 +28,6 @@
 				<div class="slider-nav">
 					<i class="slider-nav-item js-slideNavItem active fa fa-circle"></i>
 					<i class="slider-nav-item js-slideNavItem fa fa-circle"></i>
-					<!-- <i class="slider-nav-item js-slideNavItem fa fa-circle"></i> -->
 				</div>
 			</section>
 		</div>
@@ -60,14 +53,14 @@
 		<div class="market-grid">
 			<div class="grid-container">
 				<div class="grid-66 mobile-grid-100">
-					<div class="market-grid-element">
+					<a href="/collections/category/all/page-1" class="market-grid-element">
 						<img src="http://res.cloudinary.com/arte-manifiesto/image/upload/v1461249379/general/home-banner-1.png">
-					</div>
+					</a>
 				</div>
 				<div class="grid-33 mobile-grid-50 market-grid-desktop">
-					<div class="market-grid-element">
+					<a href="/products/category/phone-cases/page-1" class="market-grid-element">
 						<img src="http://res.cloudinary.com/arte-manifiesto/image/upload/v1461249383/general/home-banner-2.png">
-					</div>
+					</a>
 				</div>
 			</div>
 		</div>
@@ -75,14 +68,14 @@
 		<div class="market-grid market-grid-mobile">
 			<div class="grid-container">
 				<div class="grid-50 mobile-grid-50">
-					<div class="market-grid-element">
-						<img src="http://res.cloudinary.com/arte-manifiesto/image/upload/v1461249379/general/home-banner-2.png">
-					</div>
+					<a href="/products/category/phone-cases/page-1" class="market-grid-element">
+						<img src="http://res.cloudinary.com/arte-manifiesto/image/upload/v1461249383/general/home-banner-2.png">
+					</a>
 				</div>
 				<div class="grid-50 mobile-grid-50">
-					<div class="market-grid-element">
-						<img src="http://res.cloudinary.com/arte-manifiesto/image/upload/v1461249383/general/home-banner-3.png">
-					</div>
+					<a href="/products/category/tazas/page-1" class="market-grid-element">
+						<img src="http://res.cloudinary.com/arte-manifiesto/image/upload/v1461249379/general/home-banner-3.png">
+					</a>
 				</div>
 			</div>
 		</div>
@@ -90,14 +83,14 @@
 		<div class="market-grid">
 			<div class="grid-container">
 				<div class="grid-33 mobile-grid-50 market-grid-desktop">
-					<div class="market-grid-element">
+					<a href="/products/category/tazas/page-1" class="market-grid-element">
 						<img src="http://res.cloudinary.com/arte-manifiesto/image/upload/v1461249379/general/home-banner-3.png">
-					</div>
+					</a>
 				</div>
 				<div class="grid-66 mobile-grid-100">
-					<div class="market-grid-element">
+					<a href="/products/category/original/page-1" class="market-grid-element">
 						<img src="http://res.cloudinary.com/arte-manifiesto/image/upload/v1461249379/general/home-banner-4.png">
-					</div>
+					</a>
 				</div>
 			</div>
 		</div>
@@ -113,7 +106,7 @@
 							<br>
 							¿Qué esperas?</p>
 							<br><br><br>
-							<a class="am-View-button green">REGÍSTRATE AHORA</a>
+							<a href="/auth/signup" class="am-View-button green">REGÍSTRATE AHORA</a>
 						</div>
 					</div>
 				</div>
@@ -123,19 +116,19 @@
 		<div class="market-grid">
 			<div class="grid-container">
 				<div class="grid-33 mobile-grid-50">
-					<div class="market-grid-element">
-						<img src="http://res.cloudinary.com/arte-manifiesto/image/upload/v1461249379/general/home-banner-6.png">
-					</div>
+					<a href="/works/category/all/page-1/?order=newest" class="market-grid-element">
+						<img src="http://res.cloudinary.com/arte-manifiesto/image/upload/v1461282001/general/home-banner-6.png">
+					</a>
 				</div>
 				<div class="grid-33 mobile-grid-50">
-					<div class="market-grid-element">
+					<a href="/users/specialty/all/page-1?order=popularity&featured=1" class="market-grid-element">
 						<img src="http://res.cloudinary.com/arte-manifiesto/image/upload/v1461249379/general/home-banner-7.png">
-					</div>
+					</a>
 				</div>
-				<div class="grid-33 mobile-grid-50">
-					<div class="market-grid-element">
+				<div class="grid-33 mobile-grid-100">
+					<a href="/collections/category/all/page-1" class="market-grid-element">
 						<img src="http://res.cloudinary.com/arte-manifiesto/image/upload/v1461249379/general/home-banner-8.png">
-					</div>
+					</a>
 				</div>
 			</div>
 		</div>
@@ -155,7 +148,7 @@
 							<br>
 							Nuestra misión, es democratizar el arte</p>
 							<br><br><br>
-							<a class="am-View-button">DESCUBRE AHORA</a>
+							<a href="/works/category/all/page-1/" class="am-View-button">DESCUBRE AHORA</a>
 						</div>
 					</div>
 				</div>
