--- a/app/views/user/account/seller.html
+++ b/app/views/user/account/seller.html
@@ -192,7 +192,7 @@
 							</div>
 
 							<div class="grid-100 mobile-grid-100">
-								<a href="/user/{{user.username}}/" class="button upload green u-margin-top-40" data-color="green">IR A PORTAFOLIO</a>
+								<a style="text-align: center;" href="/user/{{user.username}}/" class="button upload green u-margin-top-40" data-color="green">IR A PORTAFOLIO</a>
 							</div>
 						</form>
 					</div>
