--- a/app/views/user/work/sell.html
+++ b/app/views/user/work/sell.html
@@ -128,8 +128,8 @@
 						<p class="title">Peso del paquete</p>
 						<input class="input" value="" placeholder="Peso en kg del paquete"></input> <br>
 					</div>
-
-					<a class="sales-button u-margin-top-30 u-margin-bottom-30">ACTUALIZAR</a>
+					<a class="sales-button save-btn-kek u-margin-top-30 u-margin-bottom-10">ACTUALIZAR</a>
+					<!-- <a class="sales-button u-margin-top-30 u-margin-bottom-30">ACTUALIZAR</a> -->
 				</div>
 				<div class="sales-right sales-right-2" style="display: none;">
 
@@ -186,7 +186,8 @@
 
 					<p class="subtitle-mall">* El precio de lista no incluye impuestos en cada país, ni el costo de envío.</p>
 
-					<a class="sales-button u-margin-top-30 u-margin-bottom-10">APLICAR CAMBIOS</a>
+					<a class="sales-button save-btn-kek u-margin-top-30 u-margin-bottom-10">APLICAR CAMBIOS</a>
+					<!-- <a class="sales-button u-margin-top-30 u-margin-bottom-10">APLICAR CAMBIOS</a> -->
 
 					<a class="help-button u-margin-top-10 u-margin-bottom-10">Necesitas ayuda?</a>
 				</div>
@@ -297,8 +298,9 @@
 					</table>
 
 					<p class="subtitle-mall u-margin-top-50">* El precio de lista no incluye impuestos en cada país, ni el costo de envío.</p>
-
-					<a class="sales-button u-margin-top-30 u-margin-bottom-10">APLICAR CAMBIOS</a>
+					
+					<a class="sales-button save-btn-kek u-margin-top-30 u-margin-bottom-10">APLICAR CAMBIOS</a>
+					<!-- <a class="sales-button u-margin-top-30 u-margin-bottom-10">APLICAR CAMBIOS</a> -->
 
 					<a class="help-button u-margin-top-10 u-margin-bottom-10">Necesitas ayuda?</a>
 				</div>
@@ -406,8 +408,9 @@
 					</table>
 
 					<p class="subtitle-mall u-margin-top-50">* El precio de lista no incluye impuestos en cada país, ni el costo de envío.</p>
-
-					<a class="sales-button u-margin-top-30 u-margin-bottom-10">APLICAR CAMBIOS</a>
+					
+					<a class="sales-button save-btn-kek u-margin-top-30 u-margin-bottom-10">APLICAR CAMBIOS</a>
+					<!-- <a class="sales-button u-margin-top-30 u-margin-bottom-10">APLICAR CAMBIOS</a> -->
 
 					<a class="help-button u-margin-top-10 u-margin-bottom-10">Necesitas ayuda?</a>
 				</div>
