--- a/app/views/user/account/requests.html
+++ b/app/views/user/account/requests.html
@@ -7,6 +7,8 @@
 {% block elements %}
 	<div class="am-profile" style="padding-left: 0; padding-right: 0;">
 
+
+
 		<div class="grid-container u-margin-top-20">
 			<div class="grid-100">
 				<p class="account-title"><i class="fa fa-caret-down"></i>Pedidos Abiertos</p>
@@ -24,413 +26,12 @@
 
 						<p class="open-seller-main-title">Pedidos abiertos</p>
 
-						<p class="u-separator u-margin-bottom-20" style="background: #979797;"></p>
-
-						<div class="open-seller-item type2">
-							<img src="http://res.cloudinary.com/arte-manifiesto/image/upload/v1450065543/general/admin-option-2.jpg">
-							<div class="information-left">
-								<p class="information-left-description">
-									PRODUCTO: <br>
-									Los Pajaritos ya no cantan como antes <br>
-									Sergio Gonzales <br>
-									ID # OO.23232.2123 <br>
-									<br>
-									VENTA DE OBRA ORIGINAL <br>
-									Obra original empacada en caja <br>
-									<br>
-									FECHA PEDIDO: <br>
-									13/05/2016
-								</p>
-							</div>
-							<div class="information-center">
-								MEDIDAS DEL PAQUETE <br>
-								2.5 kg / 50 cm x 40 cm x 10 cm <br>
-								<br>
-								Pagado con <strong>Paypal</strong> <br>
-								<br>
-								ORIGEN: <br>
-								Miraflores, LIma, Perú <br>
-								<br>
-								DESTINO: <br>
-								Chiclayo, Chiclayo, Perú
-							</div>
-							<div class="information-right">
-								<p>RESUMEN DE LA ORDEN</p>
-								<div class="table type2">
-									<div class="left">
-										<p>tu ganancia:</p>
-										<p>comisión am</p>
-										<p>subtotal:</p>
-										<p>shipping:</p>
-										<p>impuestos:</p>
-										<p>total:</p>
-									</div>
-									<div class="right">
-										<p>USD 70.00</p>
-										<p>USD 30.00</p>
-										<p>USD 100.00</p>
-										<p>USD 25.00</p>
-										<p>USD 25.00</p>
-										<p>USD 150.00</p>
-									</div>
-								</div>
-								<br>
-								<a href="" style="margin-bottom: 6px;">Ficha de envío</a>
-								<a href="">Detalle Invoice</a>
-							</div>
+						<div class="requests-container">
 						</div>
-
-						<p class="open-seller-secondary-title">Acción a realizar:</p>
-
-						<div class="open-seller-box">
-							<span class="number">1</span>
-							<p>¿Tienes a la mano tu obra ó puedes conseguirla?</p>
-							<span class="icon"><i class="fa fa-info"></i></span>
-							<a href="#" class="seller-button small green">SI</a>
-							<a href="#" class="seller-button small red">NO</a>
-						</div>
-
-						<p class="u-separator u-margin-top-30 u-margin-bottom-20" style="background: #979797;"></p>
-
-						<div class="open-seller-item type2">
-							<img src="http://res.cloudinary.com/arte-manifiesto/image/upload/v1450065543/general/admin-option-2.jpg">
-							<div class="information-left">
-								<p class="information-left-description">
-									PRODUCTO: <br>
-									Los Pajaritos ya no cantan como antes <br>
-									Sergio Gonzales <br>
-									ID # OO.23232.2123 <br>
-									<br>
-									VENTA DE OBRA ORIGINAL <br>
-									Obra original empacada en caja <br>
-									<br>
-									FECHA PEDIDO: <br>
-									13/05/2016
-								</p>
-							</div>
-							<div class="information-center">
-								MEDIDAS DEL PAQUETE <br>
-								2.5 kg / 50 cm x 40 cm x 10 cm <br>
-								<br>
-								Pagado con <strong>Paypal</strong> <br>
-								<br>
-								ORIGEN: <br>
-								Miraflores, LIma, Perú <br>
-								<br>
-								DESTINO: <br>
-								Chiclayo, Chiclayo, Perú
-							</div>
-							<div class="information-right">
-								<p>RESUMEN DE LA ORDEN</p>
-								<div class="table type2">
-									<div class="left">
-										<p>tu ganancia:</p>
-										<p>comisión am</p>
-										<p>subtotal:</p>
-										<p>shipping:</p>
-										<p>impuestos:</p>
-										<p>total:</p>
-									</div>
-									<div class="right">
-										<p>USD 70.00</p>
-										<p>USD 30.00</p>
-										<p>USD 100.00</p>
-										<p>USD 25.00</p>
-										<p>USD 25.00</p>
-										<p>USD 150.00</p>
-									</div>
-								</div>
-								<br>
-								<a href="" style="margin-bottom: 6px;">Ficha de envío</a>
-								<a href="">Detalle Invoice</a>
-							</div>
-						</div>
-
-						<p class="open-seller-secondary-title">Acción a realizar:</p>
-
-						<div class="open-seller-box">
-							<span class="number">2</span>
-							<p>Empaca bien tu arte y confirma, <a href="">mira nuestra guía de empaque</a></p>
-							<span class="icon"><i class="fa fa-info"></i></span>
-							<a href="#" class="seller-button">LISTO</a>
-						</div>
-
-						<p class="u-separator u-margin-top-30 u-margin-bottom-20" style="background: #979797;"></p>
-
-						<div class="open-seller-item type2">
-							<img src="http://res.cloudinary.com/arte-manifiesto/image/upload/v1450065543/general/admin-option-2.jpg">
-							<div class="information-left">
-								<p class="information-left-description">
-									PRODUCTO: <br>
-									Los Pajaritos ya no cantan como antes <br>
-									Sergio Gonzales <br>
-									ID # OO.23232.2123 <br>
-									<br>
-									VENTA DE OBRA ORIGINAL <br>
-									Obra original empacada en caja <br>
-									<br>
-									FECHA PEDIDO: <br>
-									13/05/2016
-								</p>
-							</div>
-							<div class="information-center">
-								MEDIDAS DEL PAQUETE <br>
-								2.5 kg / 50 cm x 40 cm x 10 cm <br>
-								<br>
-								Pagado con <strong>Paypal</strong> <br>
-								<br>
-								ORIGEN: <br>
-								Miraflores, LIma, Perú <br>
-								<br>
-								DESTINO: <br>
-								Chiclayo, Chiclayo, Perú
-							</div>
-							<div class="information-right">
-								<p>RESUMEN DE LA ORDEN</p>
-								<div class="table type2">
-									<div class="left">
-										<p>tu ganancia:</p>
-										<p>comisión am</p>
-										<p>subtotal:</p>
-										<p>shipping:</p>
-										<p>impuestos:</p>
-										<p>total:</p>
-									</div>
-									<div class="right">
-										<p>USD 70.00</p>
-										<p>USD 30.00</p>
-										<p>USD 100.00</p>
-										<p>USD 25.00</p>
-										<p>USD 25.00</p>
-										<p>USD 150.00</p>
-									</div>
-								</div>
-								<br>
-								<a href="" style="margin-bottom: 6px;">Ficha de envío</a>
-								<a href="">Detalle Invoice</a>
-							</div>
-						</div>
-
-						<p class="open-seller-secondary-title">Acción a realizar:</p>
-
-						<div class="open-seller-box">
-							<span class="number">3</span>
-							<p>Imprime la <a href="#">ficha de envío</a> y pégala al empaque</p>
-							<span class="icon"><i class="fa fa-info"></i></span>
-							<a href="#" class="seller-button">LISTO</a>
-						</div>
-
-						<p class="u-separator u-margin-top-30 u-margin-bottom-20" style="background: #979797;"></p>
-
-						<div class="open-seller-item type2">
-							<img src="http://res.cloudinary.com/arte-manifiesto/image/upload/v1450065543/general/admin-option-2.jpg">
-							<div class="information-left">
-								<p class="information-left-description">
-									PRODUCTO: <br>
-									Los Pajaritos ya no cantan como antes <br>
-									Sergio Gonzales <br>
-									ID # OO.23232.2123 <br>
-									<br>
-									VENTA DE OBRA ORIGINAL <br>
-									Obra original empacada en caja <br>
-									<br>
-									FECHA PEDIDO: <br>
-									13/05/2016
-								</p>
-							</div>
-							<div class="information-center">
-								MEDIDAS DEL PAQUETE <br>
-								2.5 kg / 50 cm x 40 cm x 10 cm <br>
-								<br>
-								Pagado con <strong>Paypal</strong> <br>
-								<br>
-								ORIGEN: <br>
-								Miraflores, LIma, Perú <br>
-								<br>
-								DESTINO: <br>
-								Chiclayo, Chiclayo, Perú
-							</div>
-							<div class="information-right">
-								<p>RESUMEN DE LA ORDEN</p>
-								<div class="table type2">
-									<div class="left">
-										<p>tu ganancia:</p>
-										<p>comisión am</p>
-										<p>subtotal:</p>
-										<p>shipping:</p>
-										<p>impuestos:</p>
-										<p>total:</p>
-									</div>
-									<div class="right">
-										<p>USD 70.00</p>
-										<p>USD 30.00</p>
-										<p>USD 100.00</p>
-										<p>USD 25.00</p>
-										<p>USD 25.00</p>
-										<p>USD 150.00</p>
-									</div>
-								</div>
-								<br>
-								<a href="" style="margin-bottom: 6px;">Ficha de envío</a>
-								<a href="">Detalle Invoice</a>
-							</div>
-						</div>
-
-						<p class="open-seller-secondary-title">Acción a realizar:</p>
-
-						<div class="open-seller-box">
-							<span class="number">4</span>
-							<p>Lleva el paquete al courrier, paga el envío(luego te lo devolvermos) y confirma</p>
-							<span class="icon"><i class="fa fa-info"></i></span>
-							<a href="#" class="seller-button">SUBIR VOUCHER</a>
-						</div>
-
-						<p class="u-separator u-margin-top-30 u-margin-bottom-20" style="background: #979797;"></p>
-
-						<div class="open-seller-item type2">
-							<img src="http://res.cloudinary.com/arte-manifiesto/image/upload/v1450065543/general/admin-option-2.jpg">
-							<div class="information-left">
-								<p class="information-left-description">
-									PRODUCTO: <br>
-									Los Pajaritos ya no cantan como antes <br>
-									Sergio Gonzales <br>
-									ID # OO.23232.2123 <br>
-									<br>
-									VENTA DE OBRA ORIGINAL <br>
-									Obra original empacada en caja <br>
-									<br>
-									FECHA PEDIDO: <br>
-									13/05/2016
-								</p>
-							</div>
-							<div class="information-center">
-								MEDIDAS DEL PAQUETE <br>
-								2.5 kg / 50 cm x 40 cm x 10 cm <br>
-								<br>
-								Pagado con <strong>Paypal</strong> <br>
-								<br>
-								ORIGEN: <br>
-								Miraflores, LIma, Perú <br>
-								<br>
-								DESTINO: <br>
-								Chiclayo, Chiclayo, Perú
-							</div>
-							<div class="information-right">
-								<p>RESUMEN DE LA ORDEN</p>
-								<div class="table type2">
-									<div class="left">
-										<p>tu ganancia:</p>
-										<p>comisión am</p>
-										<p>subtotal:</p>
-										<p>shipping:</p>
-										<p>impuestos:</p>
-										<p>total:</p>
-									</div>
-									<div class="right">
-										<p>USD 70.00</p>
-										<p>USD 30.00</p>
-										<p>USD 100.00</p>
-										<p>USD 25.00</p>
-										<p>USD 25.00</p>
-										<p>USD 150.00</p>
-									</div>
-								</div>
-								<br>
-								<a href="" style="margin-bottom: 6px;">Ficha de envío</a>
-								<a href="">Detalle Invoice</a>
-							</div>
-						</div>
-						
-						<p class="open-seller-secondary-title">Acción a realizar:</p>
-
-						<div class="open-seller-box">
-							<span class="number check"><i class="fa fa-check"></i></span>
-							<p>Listo! La obra debe estar por llegar a su destino, te avisaremos cuando </p>
-						</div>
-
-						<p class="open-seller-main-title u-margin-top-30" style="font-size: 14px; text-align: right;">Monto Cobrado: USD 245.25</p>
-
-						<p class="open-seller-main-title u-margin-top-30">Histórico de operaciones</p>
-
-						<p class="u-separator u-margin-top-10 u-margin-bottom-20" style="background: #979797;"></p>
-
-						<table class="requests-table">
-							<tr class="head">
-								<td>Id de Operacion</td>
-								<td>Monto Cobrado</td>
-								<td>Fecha de cobro</td>
-								<td>Fecha de pago</td>
-								<td>Banco</td>
-								<td>Estado</td>
-								<td>Detalle</td>
-							</tr>
-							<tr>
-								<td>OO.23232.2123</td>
-								<td>USD 3453.34</td>
-								<td>12/05/2016</td>
-								<td>15/05/05</td>
-								<td>INTERBANK</td>
-								<td><span class="state green">Por depositar</span></td>
-								<td><a href="#">Ver Detalle</a></td>
-							</tr>
-							<tr>
-								<td>OO.23232.2123</td>
-								<td>USD 3453.34</td>
-								<td>12/05/2016</td>
-								<td>15/05/05</td>
-								<td>INTERBANK</td>
-								<td><span class="state blue">Pagado</span></td>
-								<td><a href="#">Ver Detalle</a></td>
-							</tr>
-							<tr>
-								<td>OO.23232.2123</td>
-								<td>USD 3453.34</td>
-								<td>12/05/2016</td>
-								<td>15/05/05</td>
-								<td>INTERBANK</td>
-								<td><span class="state red">Observado</span></td>
-								<td><a href="#">Ver Detalle</a></td>
-							</tr>
-						</table>
-
-						<p class="open-seller-main-title u-margin-top-30">Resumen de la operación</p>
-
-						<p class="u-separator u-margin-top-10 u-margin-bottom-20" style="background: #979797;"></p>
-
-						<table class="requests-table">
-							<tr class="head">
-								<td>Id de Operacion</td>
-								<td>Monto Cobrado</td>
-								<td>Fecha de cobro</td>
-								<td>Fecha de pago</td>
-								<td>Banco</td>
-								<td>Estado</td>
-								<td>Documento</td>
-							</tr>
-							<tr>
-								<td>OO.23232.2123</td>
-								<td>USD 3453.34</td>
-								<td>12/05/2016</td>
-								<td>15/05/05</td>
-								<td>INTERBANK</td>
-								<td><span class="state green">Por depositar</span></td>
-								<td><a href="#">Ver Documento</a></td>
-							</tr>
-						</table>
-
-						<table class="requests-table">
-							<tr class="head">
-								<td>Numero de cuenta</td>
-							</tr>
-							<tr>
-								<td>02-121-23232323-24</td>
-							</tr>
-						</table>
 					</form>
 				</div>
 			</div>
 		</div>
-
 	</div>
 {% endblock %}
 
