refactoring works and products view

--- a/app/views/partials/elements/carrousel-item.html
+++ b/app/views/partials/elements/carrousel-item.html
@@ -4,7 +4,7 @@
       <div class="" style="background-image: url(<%=addFilter(photo, 'w_230,h_230,c_limit')%>);"></div>
     </a>
   <% } else { %>
-    <a class="am-MoreImages" href='/user/<%=User.username%>/<%=entity%>/<%=nameSlugify%>'>
+    <a class="am-MoreImages" href='/user/<%=User.username%>/product/<%=nameSlugify%>'>
       <div class="am-MoreImages-container">
       	<img class="am-MoreImages-inner" src="<%=addFilter(photo, 'w_230,h_230,c_limit')%>">
       </div>
