--- a/app/views/partials/elements/product.html
+++ b/app/views/partials/elements/product.html
@@ -19,7 +19,7 @@
             <img src="<%= addFilter(photo, 'w_300,h_300,c_limit') %>">
           </div>
           <div class="product-card-price"><%= finalPrice %></div>
-          <div class="product-card-zoom" style="background-image: url('<%= addFilter(photo, 'w_300,h_300,c_limit') %>')"></div>
+          <div class="product-card-zoom" style="background-image: url('<%= addFilter(Work.photo, 'h_300,c_limit') %>')"></div>
         </a>
 
       </div>
