--- a/app/views/user/work/index.html
+++ b/app/views/user/work/index.html
@@ -248,7 +248,7 @@
 					<p>+ PRODUCTOS</p>
 	                <!-- <i class="bi_misc-cube"></i> -->
 	              </div>
-	              <div class="single-tab menu-item" data-name='index'>
+	              <div class="single-tab menu-item" data-name='works'>
 					<p>+ OBRAS</p>
 	                <i class="bi_misc-cube"></i>
 	              </div>
@@ -271,139 +271,31 @@
 	<!-- ********************************************************************
 		$ PRODUCTS
 	********************************************************************* -->
-	<div class="grid-container u-margin-top-20">
-		<div class="grid-100">
-			<p class="am-Products-title">Arte de pared</p>
-			<div class="u-separator"></div>
-		</div>
-	</div>
-
-	<!-- <div class="grid-container u-margin-top-20">
-		<div class="grid-100">
-			<div class="more-carousel">
-				<div class="more-images">
-					<div class="am-MoreImages" style="background-image: url(http://res.cloudinary.com/arte-manifiesto/image/upload/v1455381925/general/product-test.jpg);"></div>
-					<div class="am-MoreImages" style="background-image: url(http://res.cloudinary.com/arte-manifiesto/image/upload/v1455381925/general/product-test.jpg);"></div>
-					<div class="am-MoreImages" style="background-image: url(http://res.cloudinary.com/arte-manifiesto/image/upload/v1455381925/general/product-test.jpg);"></div>
-					<div class="am-MoreImages" style="background-image: url(http://res.cloudinary.com/arte-manifiesto/image/upload/v1455381925/general/product-test.jpg);"></div>
-					<div class="am-MoreImages" style="background-image: url(http://res.cloudinary.com/arte-manifiesto/image/upload/v1455381925/general/product-test.jpg);"></div>
+	<div class="index-container {% if currentPath !== 'index' %} hide {% endif %}">
+		{% for cat in categories %}
+			<div class="grid-container u-margin-top-20">
+				<div class="grid-100">
+					<p class="am-Products-title">{{cat.name}}</p>
+					<div class="u-separator"></div>
 				</div>
 			</div>
-		</div>
-	</div> -->
 
-	<div class="grid-container">
-		<div class="grid-100">
-		  <div class="more-carousel js-more-carousel">
-
-			<p class="empty-profile-text empty-message bare-message hide u-margin-top-30">El artista no tiene mas obras<br><br>
-				<a href="/works/category/all/page-1/">Descubre todas las obras de AM</a>
-			</p>
-
-			<button class="nextButton"><i class="bi_interface-right"></i></button>
-			<button class="prevButton"><i class="bi_interface-left"></i></button>
-
-			<div class="more-images more">
-		        <a class="am-MoreImages" href="#">
-					<div class="" style="background-image: url(http://res.cloudinary.com/arte-manifiesto/image/upload/v1455381925/general/product-test.jpg);">
-						<p class="product-name">Polo Mujeres</p>
+			<div class="grid-container">
+				<div class="grid-100">
+					<div class="more-carousel js-more-carousel">
+					<p class="empty-profile-text empty-message bare-message hide u-margin-top-30">No hay ningún producto de {{cat.name}}<br><br>
+						<a href="/works/category/all/page-1/">Descubre todas las obras de AM</a>
+					</p>
+					<div class="more-images {{cat.nameSlugify}}">
 					</div>
-				</a>
-				<a class="am-MoreImages" href="#">
-					<div class="" style="background-image: url(http://res.cloudinary.com/arte-manifiesto/image/upload/v1455381925/general/product-test.jpg);">
-						<p class="product-name">Polo Mujeres</p>
 					</div>
-				</a>
-				<a class="am-MoreImages" href="#">
-					<div class="" style="background-image: url(http://res.cloudinary.com/arte-manifiesto/image/upload/v1455381925/general/product-test.jpg);">
-						<p class="product-name">Polo Mujeres</p>
-					</div>
-				</a>
+				</div>
 			</div>
-		  </div>
-		</div>
-	</div>
-
-	<div class="grid-container">
-		<div class="grid-100">
-			<p class="am-Products-title">Accesorios</p>
-			<div class="u-separator"></div>
-		</div>
-	</div>
-
-	<div class="grid-container">
-		<div class="grid-100">
-		  <div class="more-carousel js-more-carousel">
-
-			<p class="empty-profile-text empty-message bare-message hide u-margin-top-30">El artista no tiene mas obras<br><br>
-				<a href="/works/category/all/page-1/">Descubre todas las obras de AM</a>
-			</p>
-
-			<button class="nextButton"><i class="bi_interface-right"></i></button>
-			<button class="prevButton"><i class="bi_interface-left"></i></button>
-
-			<div class="more-images more">
-		        <a class="am-MoreImages" href="#">
-					<div class="" style="background-image: url(http://res.cloudinary.com/arte-manifiesto/image/upload/v1455381925/general/product-test.jpg);">
-						<p class="product-name">Polo Mujeres</p>
-					</div>
-				</a>
-				<a class="am-MoreImages" href="#">
-					<div class="" style="background-image: url(http://res.cloudinary.com/arte-manifiesto/image/upload/v1455381925/general/product-test.jpg);">
-						<p class="product-name">Polo Mujeres</p>
-					</div>
-				</a>
-				<a class="am-MoreImages" href="#">
-					<div class="" style="background-image: url(http://res.cloudinary.com/arte-manifiesto/image/upload/v1455381925/general/product-test.jpg);">
-						<p class="product-name">Polo Mujeres</p>
-					</div>
-				</a>
-				<a class="am-MoreImages" href="#">
-					<div class="" style="background-image: url(http://res.cloudinary.com/arte-manifiesto/image/upload/v1455381925/general/product-test.jpg);">
-						<p class="product-name">Polo Mujeres</p>
-					</div>
-				</a>
-			</div>
-		  </div>
-		</div>
-	</div>
-
-	<div class="grid-container">
-		<div class="grid-100">
-			<p class="am-Products-title">Ropa</p>
-			<div class="u-separator"></div>
-		</div>
-	</div>
-
-	<div class="grid-container">
-		<div class="grid-100">
-		  <div class="more-carousel product js-more-carousel">
-
-			<p class="empty-profile-text empty-message bare-message hide u-margin-top-30">El artista no tiene mas obras<br><br>
-				<a href="/works/category/all/page-1/">Descubre todas las obras de AM</a>
-			</p>
-
-			<button class="nextButton"><i class="bi_interface-right"></i></button>
-			<button class="prevButton"><i class="bi_interface-left"></i></button>
-
-			<div class="more-images more">
-		        <a class="am-MoreImages product" href="#">
-					<div class="" style="background-image: url(http://res.cloudinary.com/arte-manifiesto/image/upload/v1455381925/general/product-test.jpg);">
-						<p class="product-name">Polo Mujeres</p>
-					</div>
-				</a>
-				<a class="am-MoreImages product" href="#">
-					<div class="" style="background-image: url(http://res.cloudinary.com/arte-manifiesto/image/upload/v1455381925/general/product-test.jpg);">
-						<p class="product-name">Polo Mujeres</p>
-					</div>
-				</a>
-			</div>
-		  </div>
-		</div>
+		{%endfor%}
 	</div>
 
 	<!--=========================== WORKS-PRODUCTS'S RELATED AND SIMILAR ===========================-->
-	<div class="index-container {% if currentPath !== 'index' %} hide {% endif %}">
+	<div class="works-container {% if currentPath !== 'works' %} hide {% endif %}">
 	  <div class="grid-container u-margin-top-60">
 	    <div class="grid-100">
 				<p class="am-more-text u-text-center u-padding-bottom-10">Otras obras del artista</p>
@@ -623,6 +515,7 @@
 
 {% block scripts %}
 	<script>
+		var categories = {{categories|json|safe}};
 		var owner = {{owner|json|safe}};
 		var entity = {{entity|json|safe}};
 		var work = {{work|json|safe}};
