--- a/app/views/partials/header.html
+++ b/app/views/partials/header.html
@@ -21,6 +21,7 @@
 	  							<li class="search-option"><a>Buscar en obras <strong class="works-option"></strong></a></li>
 	  							<li class="search-option"><a>Buscar en artistas <strong class="users-option"></strong></a></li>
 	                <li class="search-option"><a>Buscar en colecciones <strong class="collections-option"></strong></a></li>
+	                <li class="search-option"><a>Buscar en productos <strong class="products-option"></strong></a></li>
 	  						</ul>
 	            </form>
 						</div>
