remove delete my account from account/index

--- a/app/views/user/account/index.html
+++ b/app/views/user/account/index.html
@@ -234,8 +234,9 @@
 							<button class="button u-margin-top-40" data-color="green"><i class="load fa fa-spinner"></i></button>
 						</div>
 
+						{% if !context %}
 						<a id="go-share-modal" href="#share-modal" class="detele-link">Quiero eliminar mi cuenta</a>
-
+						{%endif%}
 					</form>
 				</div>
 			</div>
