--- a/app/views/user/account/index.html
+++ b/app/views/user/account/index.html
@@ -273,7 +273,7 @@
 							<div class="grid-100 mobile-grid-100">
 								<div class="delete-buttons">
 									<a href="" class="button green u-margin-top-5" data-color="green">CANCELAR</a>
-									<a href="" class="button red u-margin-top-5" data-color="red">SI, ELIMINAR CUENTA</a>
+									<a href="" class="button red u-margin-top-5 btn-delete-force" data-color="red">SI, ELIMINAR CUENTA</a>
 								</div>
 							</div>
 						</form>
