add link to market in mobile

--- a/app/views/partials/base.html
+++ b/app/views/partials/base.html
@@ -106,6 +106,10 @@
 				</tr>
 				<tr>
 					<td></td>
+					<td><a href="/products/category/all/page-1">TIENDA</a></td>
+				</tr>
+				<tr>
+					<td></td>
 					<td><a href="/blog">BLOG</a></td>
 				</tr>
 			{% if user %}
