--- a/app/views/pages/new-landing.html
+++ b/app/views/pages/new-landing.html
@@ -17,11 +17,11 @@
 							<p class="title">La primera red social de artistas visuales y creadores de latinoamerica</p>
 						</div>
 					</div>
-					<a href="https://kuestionario.typeform.com/to/VNsGbl">
-					<div class="slider-item js-slide" style="background-image: url('http://res.cloudinary.com/arte-manifiesto/image/upload/v1450065551/general/home-slider-2.jpg')">
-						<div class="slider-item-inner">
+					<a href="http://artemanifiesto.com/blog/post/concurso-crea-tu-gocard-20516071907">
+					<div class="slider-item js-slide" style="background-image: url('http://res.cloudinary.com/arte-manifiesto/image/upload/v1462391088/case_portada_somzfw.jpg')">
+						<!-- <div class="slider-item-inner">
 							<p class="title">Participa y gana una exposicion en Casa Pausa</p>
-						</div>
+						</div> -->
 					</div>
 				</a>
 				</div>
