edit banners am

--- a/app/views/pages/new-landing.html
+++ b/app/views/pages/new-landing.html
@@ -17,8 +17,8 @@
 							<p class="title">La primera red social de artistas visuales y creadores de latinoamerica</p>
 						</div>
 					</div>
-					<a href="https://www.facebook.com/artemanifiesto">
-					<div class="slider-item js-slide" style="background-image: url('http://res.cloudinary.com/arte-manifiesto/image/upload/v1463172660/cover_AM_pxflzf.jpg')">
+					<a href="{{banners[0].link}}">
+					<div class="slider-item js-slide" style="background-image: url('{{banners[0].image}}')">
 						<!-- <div class="slider-item-inner">
 							<p class="title">Participa y gana una exposicion en Casa Pausa</p>
 						</div> -->
