--- a/app/views/user/product/index.html
+++ b/app/views/user/product/index.html
@@ -186,7 +186,7 @@
 	            <div class="single-tabs">
 	              <div class="single-tab menu-item" data-name='index'>
 									<p>+ PRODUCTOS</p>
-									<i class="bi_misc-cube"></i>
+									<i class="bi_ecommerce-market"></i>
 	              </div>
 	              <div class="single-tab menu-item" data-name='reviews'>
 	                <p>COMENTARIOS</p>
