--- a/app/views/partials/header.html
+++ b/app/views/partials/header.html
@@ -131,7 +131,7 @@
 				</div>
 				<div class="grid-50 mobile-grid-50">
 					<p class="am-NavigationMenu-title-text u-padding-bottom-15">Colecciones</p>
-					<p class="am-NavigationMenu-description-text">Conoce los productos que debes tener para este verano 2016</p>
+					<p class="am-NavigationMenu-description-text">Conoce las colecciones de los artistas</p>
 				</div>
 			</a>
 		</div>
