--- a/app/views/partials/elements/user.html
+++ b/app/views/partials/elements/user.html
@@ -30,7 +30,7 @@
               <% } %>
             </p>
             <p class="city"><%=city%>, <%=country%></p>
-            <p class="stats"><i class="bi_ecommerce-diamon"></i> <%=numOfFollowers%></p>
+            <p class="stats"><i class="bi_user-single-a-plus"></i> <%=numOfFollowers%></p>
           </div>
         </div>
       </a>
