Fixed: margin in add work screen preview

--- a/app/styles/app.min.styl
+++ b/app/styles/app.min.styl
@@ -2604,6 +2604,8 @@ white = #fff
 	// background rgba(black, .6)
 	background #eee
 	padding 100px 20px
+	.uploader-work
+		margin-top 20px;
 	.preload
 		text-align center
 		margin-top 20px
